// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildkite-graph Steps Command agents dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command agents json 1`] = `
Object {
  "steps": Array [
    Object {
      "agents": Object {
        "npm": "true",
      },
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command agents json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "agents": Object {
        "npm": "true",
      },
      "command": "noop",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command agents structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command agents yaml 1`] = `
"steps:
  - command: noop
    agents:
      npm: 'true'
"
`;

exports[`buildkite-graph Steps Command agents yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    agents:
      npm: 'true'
"
`;

exports[`buildkite-graph Steps Command artifact_paths dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command artifact_paths dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command artifact_paths json 1`] = `
Object {
  "steps": Array [
    Object {
      "artifact_paths": Array [
        "logs/**/*",
        "coverage/**/*",
      ],
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command artifact_paths json 2`] = `
Object {
  "steps": Array [
    Object {
      "artifact_paths": Array [
        "logs/**/*",
        "coverage/**/*",
      ],
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command artifact_paths json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "artifact_paths": Array [
        "logs/**/*",
        "coverage/**/*",
      ],
      "command": "noop",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command artifact_paths json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "artifact_paths": Array [
        "logs/**/*",
        "coverage/**/*",
      ],
      "command": "noop",
      "key": "_1",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command artifact_paths structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command artifact_paths structure 2`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command artifact_paths yaml 1`] = `
"steps:
  - command: noop
    artifact_paths:
      - logs/**/*
      - coverage/**/*
"
`;

exports[`buildkite-graph Steps Command artifact_paths yaml 2`] = `
"steps:
  - command: noop
    artifact_paths:
      - logs/**/*
      - coverage/**/*
"
`;

exports[`buildkite-graph Steps Command artifact_paths yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    artifact_paths:
      - logs/**/*
      - coverage/**/*
"
`;

exports[`buildkite-graph Steps Command artifact_paths yaml_depends_on 2`] = `
"steps:
  - key: _1
    command: noop
    artifact_paths:
      - logs/**/*
      - coverage/**/*
"
`;

exports[`buildkite-graph Steps Command branches dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command branches json 1`] = `
Object {
  "steps": Array [
    Object {
      "branches": "!release/* master stable/*",
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command branches json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "branches": "!release/* master stable/*",
      "command": "noop",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command branches structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command branches yaml 1`] = `
"steps:
  - branches: '!release/* master stable/*'
    command: noop
"
`;

exports[`buildkite-graph Steps Command branches yaml_depends_on 1`] = `
"steps:
  - branches: '!release/* master stable/*'
    key: _0
    command: noop
"
`;

exports[`buildkite-graph Steps Command concurrency dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command concurrency dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command concurrency dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command concurrency json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "concurrency": 3,
      "concurrency_group": "my-app/deploy",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command concurrency json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "concurrency": 3,
      "concurrency_group": "my-app/deploy",
      "concurrency_method": "eager",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command concurrency json 3`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "concurrency": 3,
      "concurrency_group": "my-app/deploy",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command concurrency json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "concurrency": 3,
      "concurrency_group": "my-app/deploy",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command concurrency json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "concurrency": 3,
      "concurrency_group": "my-app/deploy",
      "concurrency_method": "eager",
      "key": "_1",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command concurrency json_depends_on 3`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "concurrency": 3,
      "concurrency_group": "my-app/deploy",
      "key": "_2",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command concurrency structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command concurrency structure 2`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command concurrency structure 3`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command concurrency yaml 1`] = `
"steps:
  - command: noop
    concurrency: 3
    concurrency_group: my-app/deploy
"
`;

exports[`buildkite-graph Steps Command concurrency yaml 2`] = `
"steps:
  - command: noop
    concurrency: 3
    concurrency_group: my-app/deploy
    concurrency_method: eager
"
`;

exports[`buildkite-graph Steps Command concurrency yaml 3`] = `
"steps:
  - command: noop
    concurrency: 3
    concurrency_group: my-app/deploy
"
`;

exports[`buildkite-graph Steps Command concurrency yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    concurrency: 3
    concurrency_group: my-app/deploy
"
`;

exports[`buildkite-graph Steps Command concurrency yaml_depends_on 2`] = `
"steps:
  - key: _1
    command: noop
    concurrency: 3
    concurrency_group: my-app/deploy
    concurrency_method: eager
"
`;

exports[`buildkite-graph Steps Command concurrency yaml_depends_on 3`] = `
"steps:
  - key: _2
    command: noop
    concurrency: 3
    concurrency_group: my-app/deploy
"
`;

exports[`buildkite-graph Steps Command continue on failure multiple subsequent always-executed subsequent steps do not get an additional wait step dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<command.sh>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<echo This runs regardless of the success or failure>\\" [ color = \\"grey\\" ];
  \\"<echo This runs regardless of the success or failure 2>\\" [ color = \\"grey\\" ];
  \\"<echo This runs regardless of the success or failure 3>\\" [ color = \\"grey\\" ];
}

  \\"<command.sh>\\";
  \\"<echo This runs regardless of the success or failure>\\";
  \\"<echo This runs regardless of the success or failure 2>\\";
  \\"<echo This runs regardless of the success or failure 3>\\";
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure 2>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure 3>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps Command continue on failure multiple subsequent always-executed subsequent steps do not get an additional wait step json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "command.sh",
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "command": "echo This runs regardless of the success or failure",
    },
    Object {
      "command": "echo This runs regardless of the success or failure 2",
    },
    Object {
      "command": "echo This runs regardless of the success or failure 3",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command continue on failure multiple subsequent always-executed subsequent steps do not get an additional wait step json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "command.sh",
      "key": "_0",
    },
    Object {
      "command": "echo This runs regardless of the success or failure",
      "depends_on": Array [
        Object {
          "allow_failure": true,
          "step": "_0",
        },
      ],
      "key": "_1",
    },
    Object {
      "command": "echo This runs regardless of the success or failure 2",
      "depends_on": Array [
        Object {
          "allow_failure": true,
          "step": "_0",
        },
      ],
      "key": "_2",
    },
    Object {
      "command": "echo This runs regardless of the success or failure 3",
      "depends_on": Array [
        Object {
          "allow_failure": true,
          "step": "_0",
        },
      ],
      "key": "_3",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command continue on failure multiple subsequent always-executed subsequent steps do not get an additional wait step structure 1`] = `
"* <command.sh>
* [wait; continues on failure]
* <echo This runs regardless of the success or failure>
* <echo This runs regardless of the success or failure 2>
* <echo This runs regardless of the success or failure 3>"
`;

exports[`buildkite-graph Steps Command continue on failure multiple subsequent always-executed subsequent steps do not get an additional wait step yaml 1`] = `
"steps:
  - command: command.sh
  - wait: ~
    continue_on_failure: true
  - command: echo This runs regardless of the success or failure
  - command: echo This runs regardless of the success or failure 2
  - command: echo This runs regardless of the success or failure 3
"
`;

exports[`buildkite-graph Steps Command continue on failure multiple subsequent always-executed subsequent steps do not get an additional wait step yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: command.sh
  - key: _1
    depends_on:
      - step: _0
        allow_failure: true
    command: echo This runs regardless of the success or failure
  - key: _2
    depends_on:
      - step: _0
        allow_failure: true
    command: echo This runs regardless of the success or failure 2
  - key: _3
    depends_on:
      - step: _0
        allow_failure: true
    command: echo This runs regardless of the success or failure 3
"
`;

exports[`buildkite-graph Steps Command continue on failure subsequent depending steps that are not always executed get an additional wait step dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<command.sh>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<echo This runs regardless of the success or failure>\\" [ color = \\"grey\\" ];
  \\"<echo The command passed>\\" [ color = \\"grey\\" ];
}

  \\"<command.sh>\\";
  \\"<echo This runs regardless of the success or failure>\\";
  \\"<echo The command passed>\\";
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<command.sh>\\" -> \\"<echo The command passed>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps Command continue on failure subsequent depending steps that are not always executed get an additional wait step json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "command.sh",
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "command": "echo This runs regardless of the success or failure",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "echo The command passed",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command continue on failure subsequent depending steps that are not always executed get an additional wait step json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "command.sh",
      "key": "_0",
    },
    Object {
      "command": "echo This runs regardless of the success or failure",
      "depends_on": Array [
        Object {
          "allow_failure": true,
          "step": "_0",
        },
      ],
      "key": "_1",
    },
    Object {
      "command": "echo The command passed",
      "depends_on": Array [
        Object {
          "step": "_0",
        },
      ],
      "key": "_2",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command continue on failure subsequent depending steps that are not always executed get an additional wait step structure 1`] = `
"* <command.sh>
* [wait; continues on failure]
* <echo This runs regardless of the success or failure>
* [wait]
* <echo The command passed>"
`;

exports[`buildkite-graph Steps Command continue on failure subsequent depending steps that are not always executed get an additional wait step yaml 1`] = `
"steps:
  - command: command.sh
  - wait: ~
    continue_on_failure: true
  - command: echo This runs regardless of the success or failure
  - wait: ~
  - command: echo The command passed
"
`;

exports[`buildkite-graph Steps Command continue on failure subsequent depending steps that are not always executed get an additional wait step yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: command.sh
  - key: _1
    depends_on:
      - step: _0
        allow_failure: true
    command: echo This runs regardless of the success or failure
  - key: _2
    depends_on:
      - step: _0
    command: echo The command passed
"
`;

exports[`buildkite-graph Steps Command dependency failures dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<a.sh>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<b.sh>\\" [ color = \\"grey\\" ];
  \\"<c.sh>\\" [ color = \\"grey\\" ];
}

  \\"<a.sh>\\";
  \\"<b.sh>\\";
  \\"<c.sh>\\";
  \\"<a.sh>\\" -> \\"<b.sh>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<a.sh>\\" -> \\"<c.sh>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<a.sh>\\" -> \\"<c.sh>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps Command dependency failures json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "a.sh",
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "command": "b.sh",
    },
    Object {
      "command": "c.sh",
    },
    Object {
      "command": "c.sh",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command dependency failures json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "a.sh",
      "key": "_0",
    },
    Object {
      "allow_dependency_failure": true,
      "command": "b.sh",
      "depends_on": Array [
        Object {
          "step": "_0",
        },
      ],
      "key": "_1",
    },
    Object {
      "command": "c.sh",
      "depends_on": Array [
        Object {
          "allow_failure": true,
          "step": "_0",
        },
      ],
      "key": "_2",
    },
    Object {
      "allow_dependency_failure": true,
      "command": "c.sh",
      "depends_on": Array [
        Object {
          "step": "_0",
        },
      ],
      "key": "_3",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command dependency failures structure 1`] = `
"* <a.sh>
* [wait; continues on failure]
* <b.sh>
* <c.sh>
* <c.sh>"
`;

exports[`buildkite-graph Steps Command dependency failures yaml 1`] = `
"steps:
  - command: a.sh
  - wait: ~
    continue_on_failure: true
  - command: b.sh
  - command: c.sh
  - command: c.sh
"
`;

exports[`buildkite-graph Steps Command dependency failures yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: a.sh
  - key: _1
    depends_on:
      - step: _0
    allow_dependency_failure: true
    command: b.sh
  - key: _2
    depends_on:
      - step: _0
        allow_failure: true
    command: c.sh
  - key: _3
    depends_on:
      - step: _0
    allow_dependency_failure: true
    command: c.sh
"
`;

exports[`buildkite-graph Steps Command env dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command env json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "env": Object {
        "DEBUG": "true",
        "RAILS_ENV": "test",
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command env json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "env": Object {
        "DEBUG": "true",
        "RAILS_ENV": "test",
      },
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command env structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command env yaml 1`] = `
"steps:
  - command: noop
    env:
      RAILS_ENV: test
      DEBUG: 'true'
"
`;

exports[`buildkite-graph Steps Command env yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    env:
      RAILS_ENV: test
      DEBUG: 'true'
"
`;

exports[`buildkite-graph Steps Command key dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command key json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command key json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "my-key",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command key structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command key yaml 1`] = `
"steps:
  - command: noop
"
`;

exports[`buildkite-graph Steps Command key yaml_depends_on 1`] = `
"steps:
  - key: my-key
    command: noop
"
`;

exports[`buildkite-graph Steps Command label dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"my label\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command label json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "label": "my label",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command label json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
      "label": "my label",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command label structure 1`] = `"* my label"`;

exports[`buildkite-graph Steps Command label yaml 1`] = `
"steps:
  - label: my label
    command: noop
"
`;

exports[`buildkite-graph Steps Command label yaml_depends_on 1`] = `
"steps:
  - label: my label
    key: _0
    command: noop
"
`;

exports[`buildkite-graph Steps Command parallelism dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop> [x 123]\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command parallelism dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command parallelism json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "parallelism": 123,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command parallelism json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command parallelism json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
      "parallelism": 123,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command parallelism json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_1",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command parallelism structure 1`] = `"* <noop> [x 123]"`;

exports[`buildkite-graph Steps Command parallelism structure 2`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command parallelism yaml 1`] = `
"steps:
  - command: noop
    parallelism: 123
"
`;

exports[`buildkite-graph Steps Command parallelism yaml 2`] = `
"steps:
  - command: noop
"
`;

exports[`buildkite-graph Steps Command parallelism yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    parallelism: 123
"
`;

exports[`buildkite-graph Steps Command parallelism yaml_depends_on 2`] = `
"steps:
  - key: _1
    command: noop
"
`;

exports[`buildkite-graph Steps Command plugins add plugins dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command plugins add plugins json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "plugins": Array [
        Object {
          "bugcrowd/test-summary#v1.5.0": Object {
            "inputs": Array [
              Object {
                "artifact_path": "web/target/htmllint-*.txt",
                "label": ":htmllint: HTML lint",
                "type": "oneline",
              },
            ],
          },
        },
        Object {
          "detect-clowns#v1.0.0": null,
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command plugins add plugins json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
      "plugins": Array [
        Object {
          "bugcrowd/test-summary#v1.5.0": Object {
            "inputs": Array [
              Object {
                "artifact_path": "web/target/htmllint-*.txt",
                "label": ":htmllint: HTML lint",
                "type": "oneline",
              },
            ],
          },
        },
        Object {
          "detect-clowns#v1.0.0": null,
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command plugins add plugins structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command plugins add plugins yaml 1`] = `
"steps:
  - command: noop
    plugins:
      - 'bugcrowd/test-summary#v1.5.0':
          inputs:
            - label: ':htmllint: HTML lint'
              artifact_path: web/target/htmllint-*.txt
              type: oneline
      - 'detect-clowns#v1.0.0': ~
"
`;

exports[`buildkite-graph Steps Command plugins add plugins yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    plugins:
      - 'bugcrowd/test-summary#v1.5.0':
          inputs:
            - label: ':htmllint: HTML lint'
              artifact_path: web/target/htmllint-*.txt
              type: oneline
      - 'detect-clowns#v1.0.0': ~
"
`;

exports[`buildkite-graph Steps Command retry dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 4`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 5`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 6`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 7`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 8`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 9`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "automatic": true,
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "automatic": Array [
          Object {
            "exit_status": "*",
            "limit": 2,
          },
          Object {
            "exit_status": 255,
            "limit": 2,
          },
        ],
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 3`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "manual": Object {
          "allowed": false,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 4`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "manual": Object {
          "allowed": false,
          "reason": "Sorry, you can't retry a deployment",
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 5`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 6`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "manual": Object {
          "permit_on_passed": true,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 7`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "automatic": true,
        "manual": Object {
          "permit_on_passed": true,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 8`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "automatic": Object {
          "limit": 2,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 9`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "automatic": Object {
          "limit": 1,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
      "retry": Object {
        "automatic": true,
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_1",
      "retry": Object {
        "automatic": Array [
          Object {
            "exit_status": "*",
            "limit": 2,
          },
          Object {
            "exit_status": 255,
            "limit": 2,
          },
        ],
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json_depends_on 3`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_2",
      "retry": Object {
        "manual": Object {
          "allowed": false,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json_depends_on 4`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_3",
      "retry": Object {
        "manual": Object {
          "allowed": false,
          "reason": "Sorry, you can't retry a deployment",
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json_depends_on 5`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_4",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json_depends_on 6`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_5",
      "retry": Object {
        "manual": Object {
          "permit_on_passed": true,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json_depends_on 7`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_6",
      "retry": Object {
        "automatic": true,
        "manual": Object {
          "permit_on_passed": true,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json_depends_on 8`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_7",
      "retry": Object {
        "automatic": Object {
          "limit": 2,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json_depends_on 9`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_8",
      "retry": Object {
        "automatic": Object {
          "limit": 1,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command retry structure 2`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command retry structure 3`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command retry structure 4`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command retry structure 5`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command retry structure 6`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command retry structure 7`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command retry structure 8`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command retry structure 9`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command retry yaml 1`] = `
"steps:
  - command: noop
    retry:
      automatic: true
"
`;

exports[`buildkite-graph Steps Command retry yaml 2`] = `
"steps:
  - command: noop
    retry:
      automatic:
        - exit_status: '*'
          limit: 2
        - exit_status: 255
          limit: 2
"
`;

exports[`buildkite-graph Steps Command retry yaml 3`] = `
"steps:
  - command: noop
    retry:
      manual:
        allowed: false
"
`;

exports[`buildkite-graph Steps Command retry yaml 4`] = `
"steps:
  - command: noop
    retry:
      manual:
        allowed: false
        reason: 'Sorry, you can''t retry a deployment'
"
`;

exports[`buildkite-graph Steps Command retry yaml 5`] = `
"steps:
  - command: noop
"
`;

exports[`buildkite-graph Steps Command retry yaml 6`] = `
"steps:
  - command: noop
    retry:
      manual:
        permit_on_passed: true
"
`;

exports[`buildkite-graph Steps Command retry yaml 7`] = `
"steps:
  - command: noop
    retry:
      manual:
        permit_on_passed: true
      automatic: true
"
`;

exports[`buildkite-graph Steps Command retry yaml 8`] = `
"steps:
  - command: noop
    retry:
      automatic:
        limit: 2
"
`;

exports[`buildkite-graph Steps Command retry yaml 9`] = `
"steps:
  - command: noop
    retry:
      automatic:
        limit: 1
"
`;

exports[`buildkite-graph Steps Command retry yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    retry:
      automatic: true
"
`;

exports[`buildkite-graph Steps Command retry yaml_depends_on 2`] = `
"steps:
  - key: _1
    command: noop
    retry:
      automatic:
        - exit_status: '*'
          limit: 2
        - exit_status: 255
          limit: 2
"
`;

exports[`buildkite-graph Steps Command retry yaml_depends_on 3`] = `
"steps:
  - key: _2
    command: noop
    retry:
      manual:
        allowed: false
"
`;

exports[`buildkite-graph Steps Command retry yaml_depends_on 4`] = `
"steps:
  - key: _3
    command: noop
    retry:
      manual:
        allowed: false
        reason: 'Sorry, you can''t retry a deployment'
"
`;

exports[`buildkite-graph Steps Command retry yaml_depends_on 5`] = `
"steps:
  - key: _4
    command: noop
"
`;

exports[`buildkite-graph Steps Command retry yaml_depends_on 6`] = `
"steps:
  - key: _5
    command: noop
    retry:
      manual:
        permit_on_passed: true
"
`;

exports[`buildkite-graph Steps Command retry yaml_depends_on 7`] = `
"steps:
  - key: _6
    command: noop
    retry:
      manual:
        permit_on_passed: true
      automatic: true
"
`;

exports[`buildkite-graph Steps Command retry yaml_depends_on 8`] = `
"steps:
  - key: _7
    command: noop
    retry:
      automatic:
        limit: 2
"
`;

exports[`buildkite-graph Steps Command retry yaml_depends_on 9`] = `
"steps:
  - key: _8
    command: noop
    retry:
      automatic:
        limit: 1
"
`;

exports[`buildkite-graph Steps Command skip function dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command skip function dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command skip function dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command skip function json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip function json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "skip": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip function json 3`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "skip": "my reason",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip function json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip function json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_1",
      "skip": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip function json_depends_on 3`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_2",
      "skip": "my reason",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip function structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command skip function structure 2`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command skip function structure 3`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command skip function yaml 1`] = `
"steps:
  - command: noop
"
`;

exports[`buildkite-graph Steps Command skip function yaml 2`] = `
"steps:
  - command: noop
    skip: true
"
`;

exports[`buildkite-graph Steps Command skip function yaml 3`] = `
"steps:
  - command: noop
    skip: my reason
"
`;

exports[`buildkite-graph Steps Command skip function yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
"
`;

exports[`buildkite-graph Steps Command skip function yaml_depends_on 2`] = `
"steps:
  - key: _1
    command: noop
    skip: true
"
`;

exports[`buildkite-graph Steps Command skip function yaml_depends_on 3`] = `
"steps:
  - key: _2
    command: noop
    skip: my reason
"
`;

exports[`buildkite-graph Steps Command skip value dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command skip value dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command skip value dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command skip value json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip value json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "skip": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip value json 3`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "skip": "my reason",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip value json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip value json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_1",
      "skip": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip value json_depends_on 3`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_2",
      "skip": "my reason",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip value structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command skip value structure 2`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command skip value structure 3`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command skip value yaml 1`] = `
"steps:
  - command: noop
"
`;

exports[`buildkite-graph Steps Command skip value yaml 2`] = `
"steps:
  - command: noop
    skip: true
"
`;

exports[`buildkite-graph Steps Command skip value yaml 3`] = `
"steps:
  - command: noop
    skip: my reason
"
`;

exports[`buildkite-graph Steps Command skip value yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
"
`;

exports[`buildkite-graph Steps Command skip value yaml_depends_on 2`] = `
"steps:
  - key: _1
    command: noop
    skip: true
"
`;

exports[`buildkite-graph Steps Command skip value yaml_depends_on 3`] = `
"steps:
  - key: _2
    command: noop
    skip: my reason
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "soft_fail": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail boolean json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "soft_fail": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail boolean json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
      "soft_fail": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail boolean json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_1",
      "soft_fail": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail boolean structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command soft_fail boolean structure 2`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command soft_fail boolean yaml 1`] = `
"steps:
  - command: noop
    soft_fail: true
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean yaml 2`] = `
"steps:
  - command: noop
    soft_fail: true
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    soft_fail: true
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean yaml_depends_on 2`] = `
"steps:
  - key: _1
    command: noop
    soft_fail: true
"
`;

exports[`buildkite-graph Steps Command soft_fail multiple dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command soft_fail multiple json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "soft_fail": Array [
        Object {
          "exit_status": 1,
        },
        Object {
          "exit_status": -127,
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail multiple json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
      "soft_fail": Array [
        Object {
          "exit_status": 1,
        },
        Object {
          "exit_status": -127,
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail multiple structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command soft_fail multiple yaml 1`] = `
"steps:
  - command: noop
    soft_fail:
      - exit_status: 1
      - exit_status: -127
"
`;

exports[`buildkite-graph Steps Command soft_fail multiple yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    soft_fail:
      - exit_status: 1
      - exit_status: -127
"
`;

exports[`buildkite-graph Steps Command soft_fail star dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command soft_fail star json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "soft_fail": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail star json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
      "soft_fail": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail star structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command soft_fail star yaml 1`] = `
"steps:
  - command: noop
    soft_fail: true
"
`;

exports[`buildkite-graph Steps Command soft_fail star yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
    soft_fail: true
"
`;

exports[`buildkite-graph Steps Command step addition dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command step addition dot 2`] = `
"digraph \\"x\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<(empty)>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command step addition json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "",
      "key": "_1",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition structure 1`] = `"* <yarn && yarn test>"`;

exports[`buildkite-graph Steps Command step addition structure 2`] = `"* <(empty)>"`;

exports[`buildkite-graph Steps Command step addition yaml 1`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command step addition yaml 2`] = `
"steps:
  - command: ''
"
`;

exports[`buildkite-graph Steps Command step addition yaml_depends_on 1`] = `
"steps:
  - key: _0
    command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command step addition yaml_depends_on 2`] = `
"steps:
  - key: _1
    command: ''
"
`;

exports[`buildkite-graph Steps Command timeouts can be infinite dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command timeouts can be infinite json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts can be infinite json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts can be infinite structure 1`] = `"* <noop>"`;

exports[`buildkite-graph Steps Command timeouts can be infinite yaml 1`] = `
"steps:
  - command: noop
"
`;

exports[`buildkite-graph Steps Command timeouts can be infinite yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: noop
"
`;

exports[`buildkite-graph Steps Command timeouts commands with timeouts set step timeout total dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn install && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command timeouts commands with timeouts set step timeout total json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "timeout_in_minutes": 20,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts commands with timeouts set step timeout total json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "key": "_0",
      "timeout_in_minutes": 20,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts commands with timeouts set step timeout total structure 1`] = `"* <yarn install && yarn test>"`;

exports[`buildkite-graph Steps Command timeouts commands with timeouts set step timeout total yaml 1`] = `
"steps:
  - command:
      - yarn install
      - yarn test
    timeout_in_minutes: 20
"
`;

exports[`buildkite-graph Steps Command timeouts commands with timeouts set step timeout total yaml_depends_on 1`] = `
"steps:
  - key: _0
    command:
      - yarn install
      - yarn test
    timeout_in_minutes: 20
"
`;

exports[`buildkite-graph Steps Command timeouts one infinite timeout will cancel out the others dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn install && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command timeouts one infinite timeout will cancel out the others json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts one infinite timeout will cancel out the others json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "key": "_0",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts one infinite timeout will cancel out the others structure 1`] = `"* <yarn install && yarn test>"`;

exports[`buildkite-graph Steps Command timeouts one infinite timeout will cancel out the others yaml 1`] = `
"steps:
  - command:
      - yarn install
      - yarn test
"
`;

exports[`buildkite-graph Steps Command timeouts one infinite timeout will cancel out the others yaml_depends_on 1`] = `
"steps:
  - key: _0
    command:
      - yarn install
      - yarn test
"
`;

exports[`buildkite-graph Steps Command timeouts step timeout total trumps commands dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn install && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command timeouts step timeout total trumps commands json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "timeout_in_minutes": 2,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts step timeout total trumps commands json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "key": "_0",
      "timeout_in_minutes": 2,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts step timeout total trumps commands structure 1`] = `"* <yarn install && yarn test>"`;

exports[`buildkite-graph Steps Command timeouts step timeout total trumps commands yaml 1`] = `
"steps:
  - command:
      - yarn install
      - yarn test
    timeout_in_minutes: 2
"
`;

exports[`buildkite-graph Steps Command timeouts step timeout total trumps commands yaml_depends_on 1`] = `
"steps:
  - key: _0
    command:
      - yarn install
      - yarn test
    timeout_in_minutes: 2
"
`;

exports[`buildkite-graph Steps dependencies step dependency dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<a>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<b>\\" [ color = \\"grey\\" ];
}

  \\"<a>\\";
  \\"<b>\\";
  \\"<a>\\" -> \\"<b>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps dependencies step dependency dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<a>\\" [ color = \\"grey\\" ];
  \\"<b>\\" [ color = \\"grey\\" ];
  \\"<c>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<d>\\" [ color = \\"grey\\" ];
}

  \\"<c>\\";
  \\"<d>\\";
  \\"<b>\\";
  \\"<a>\\";
  \\"<c>\\" -> \\"<d>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<b>\\" -> \\"<d>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<a>\\" -> \\"<d>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps dependencies step dependency json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "b",
    },
  ],
}
`;

exports[`buildkite-graph Steps dependencies step dependency json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
    },
    Object {
      "command": "b",
    },
    Object {
      "command": "c",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "d",
    },
  ],
}
`;

exports[`buildkite-graph Steps dependencies step dependency json_depends_on 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
      "key": "_0",
    },
    Object {
      "command": "b",
      "depends_on": Array [
        Object {
          "step": "_0",
        },
      ],
      "key": "_1",
    },
  ],
}
`;

exports[`buildkite-graph Steps dependencies step dependency json_depends_on 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "a",
      "key": "_2",
    },
    Object {
      "command": "b",
      "key": "_3",
    },
    Object {
      "command": "c",
      "key": "_4",
    },
    Object {
      "command": "d",
      "depends_on": Array [
        Object {
          "step": "_2",
        },
        Object {
          "step": "_3",
        },
        Object {
          "step": "_4",
        },
      ],
      "key": "_5",
    },
  ],
}
`;

exports[`buildkite-graph Steps dependencies step dependency structure 1`] = `
"* <a>
* [wait]
* <b>"
`;

exports[`buildkite-graph Steps dependencies step dependency structure 2`] = `
"* <a>
* <b>
* <c>
* [wait]
* <d>"
`;

exports[`buildkite-graph Steps dependencies step dependency yaml 1`] = `
"steps:
  - command: a
  - wait: ~
  - command: b
"
`;

exports[`buildkite-graph Steps dependencies step dependency yaml 2`] = `
"steps:
  - command: a
  - command: b
  - command: c
  - wait: ~
  - command: d
"
`;

exports[`buildkite-graph Steps dependencies step dependency yaml_depends_on 1`] = `
"steps:
  - key: _0
    command: a
  - key: _1
    depends_on:
      - step: _0
    command: b
"
`;

exports[`buildkite-graph Steps dependencies step dependency yaml_depends_on 2`] = `
"steps:
  - key: _2
    command: a
  - key: _3
    command: b
  - key: _4
    command: c
  - key: _5
    depends_on:
      - step: _2
      - step: _3
      - step: _4
    command: d
"
`;
